--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/cutlass"]
 	path = 3rdparty/cutlass
 	url = https://github.com/NVIDIA/cutlass.git
+[submodule "3rdparty/tensorrt"]
+	path = 3rdparty/tensorrt
+	url = https://github.com/NVIDIA/TensorRT.git
